@@ -12,6 +12,10 @@
  + Fix: the margin colors for panels are determined by the margins in theme files
  + Fix: when a file is deleted outside of 4coder, the '!' dirty status is added to the buffer
  + Fix: on mac file changes outside of 4coder are detected and do not stall the UI
+ + Fix: in virtual whitespace layouts blank lines correctly mark carriage return characters before newline characters
+ + Fix: auto-indentation leaves the carriage return in CRLF line endings in place and does not count them as indentation
+ + Fix: lexer emit pointer advances correctly when the output buffer becomes full
+ + Improvement: optimization in clean_all_lines command, handles CRLF line endings
 
 4.1.2
  + Cursor color changes when recording macro if the theme provides a second cursor color
